Add start date attribute to crime application schema

--- a/prototyping/criminal-legal-aid/1.0.0/examples/legal_aid_application.json
+++ b/prototyping/criminal-legal-aid/1.0.0/examples/legal_aid_application.json
@@ -112,5 +112,6 @@
    ],
    "application_type": "Initial application",
    "application_reference": "LAA-123",
+   "application_start_date": "2022-07-24",
    "version": 1
 }
