--- a/prototyping/criminal-legal-aid/1.0.0/schemas/legal_aid_application.json
+++ b/prototyping/criminal-legal-aid/1.0.0/schemas/legal_aid_application.json
@@ -53,6 +53,7 @@
     },
     "application_type": { "type": "string" },
     "application_reference": { "type": "string" },
+    "application_start_date": { "type": "string", "format": "date" },
     "version": { "type": "number" }
   },
   "required": ["applicant_details", "provider_details", "case_details", "interests_of_justice"],
