--- a/prototyping/criminal-legal-aid/1.0.0/examples/legal_aid_application.json
+++ b/prototyping/criminal-legal-aid/1.0.0/examples/legal_aid_application.json
@@ -1,6 +1,6 @@
 {
-  "applicant_details": {
-    "applicant": {
+  "client_details": {
+    "client": {
       "first_name": "aaa",
       "last_name": "bbb",
       "address": {
